# GINKGO_Dashboard

./: .gitignore  Cargo.toml  Trunk.toml  index.html
.github/workflows/: benchmark.yml  ci.yml  deploy.yml
benchmarks/: bench_9023d6c.json  bench_bfa96ba.json  commits.json
proptest-regressions/visualization/: outliers.txt
src/: lib.rs  main.rs  state_url.rs  types.rs  vis_tests.rs  wasm.rs
src/data/: git.rs  git_http.rs  loader.rs  mod.rs  state.rs
src/data/models/: benchmark.rs  mod.rs
src/datagen/: benchmarks.rs  commit_series.rs  matrices.rs  mod.rs  rng.rs  solvers.rs
src/export/: dashboard.rs  mod.rs  pdf.rs  svg.rs
src/ui/: charts.rs  mod.rs  sidebar.rs  solver_view.rs
src/visualization/: compare.rs  filter.rs  formula.rs  math.rs  mod.rs  outliers.rs  plotting.rs  profile.rs  scatter.rs  solver.rs  stacked_bar.rs  timeseries.rs  tooltip.rs  utils.rs
